trying to fix image bug on mobile 2

--- a/src/styles/elements/_constructor-standings.scss
+++ b/src/styles/elements/_constructor-standings.scss
@@ -40,7 +40,10 @@
             }
 
             .constructor-image {
-                pointer-events: none;
+                img {
+                    pointer-events: none;
+                    user-select: none;
+                }
             }
 
             .constructor-position {
